[tool.poetry]
name = "treetime-worker"
version = "0.1.0"
description = "Treetime worker"
keywords = []
classifiers = []
authors = []
repository = ""
homepage = ""
documentation = ""
license = ""
readme = "README.md"
packages = [{ include = "src/**/*.py" }]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.6.9"
biopython = "1.71"
boto3 = "1.11.13"
mypy = "0.750"
numpy = "1.13.3"
pandas = "0.24.2"
phylo-treetime = "0.5.1"
pika = "1.1.0"

[tool.poetry.dev-dependencies]
data-science-types = "^0.2.5"
flake8 = "3.7.9"
flake8-bugbear = "19.8.0"
flake8-docstrings = "1.5.0"
pylint = "2.4.4"
pytest = "5.3.1"
pytest-cov = "2.8.1"
pytest-instafail = "0.4.1"
pytest-mock = "1.13.0"
pytest-sugar = "0.9.2"
pytest-xdist = "1.30.0"
typing = "3.7.4"
vulture = "1.2"
yapf = "0.29.0"

[tool.isort]
atomic = true
filter_files = true
force_single_line = true
include_trailing_comma = true
line_length = 80
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
use_parentheses = true

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
